--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -61,13 +61,93 @@
     
 }
 
-.form_login form{
 
-
-    position: absolute;
-    left: 21%;
+.form_loginhome{
+    width: 600px;
+    height: 600px;
     
+    border-radius: 10%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color:tomato;
+    color: white;
+    padding: 25px 30px;
+    box-sizing: border-box;
+}
+
+.form_loginhome .logo{
+    width: 75px;
+    height: 75px;
+    
+    top: 5px;
+    left: calc(10% - 50px);
+    position:absolute;
+
+}
+
+.form_loginhome h1{
+
+    margin: 0;
+    padding: 0 0 50px;
+    text-align: center;
+    font-size: 40px;
 
 
 }
+
+.form_loginhome label{
+    margin: 0;
+    text-align: center;
+
+    padding: 100;
+    font-weight: bold;
+    display: block; 
+    
+
+}
+
+.form_loginhome button{
+
+
+    width: 125px;
+    height: 125px;
+    margin: 10px 200px;
+    padding: 100;
+    font-weight: bold;
+    display: block;
+
+    
+}
+
+.form_loginhome .img_boton{
+    width: 75px;
+    height: 75px;
+    
+    
+
+}
+
+.form_loginhome button{
+
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 500;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
+
+}
+
+.form_loginhome button:hover{
+    
+    color: #1883ba;
+    background-color: #ffffff;
+
+
+}
+
 
