--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,5 +1,12 @@
+a{
+
+color: white;
+font-weight: 600;
+
+}
+
 .form_login{
-    width: 350PX;
+    width: 300PX ;
     height: 350PX;
     
     border-radius: 20%;
@@ -11,6 +18,12 @@
     color: white;
     padding: 70px 30px;
     box-sizing: border-box;
+}
+
+.form_login button:hover{
+    background-color: #ffffff;
+    color:#1883ba;
+    font-weight: 600;
 }
 
 
@@ -45,27 +58,19 @@
 }
 
 .form_login input{
-    margin: 0;
+    
     padding: 100;
     text-align: center;
     font-weight: bold;
     display: block; 
-}
-
-.form_login input{
-    
-    margin: auto;
-    padding: 100;
-    font-weight: bold;
-    display: block; 
+    margin: 0;
     
 }
 
 
 .form_loginhome{
-    width: 600px;
+    width: 500px;
     height: 600px;
-    
     border-radius: 10%;
     position: absolute;
     left: 50%;
@@ -78,17 +83,18 @@
 }
 
 .form_loginhome .logo{
-    width: 75px;
-    height: 75px;
+    width: 100px;
+    height: 100px;
     
-    top: 5px;
-    left: calc(10% - 50px);
+    top: 10px;
+    left: calc(12% - 50px);
     position:absolute;
 
 }
 
 .form_loginhome h1{
-
+    
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0 0 50px;
     text-align: center;
@@ -97,7 +103,40 @@
 
 }
 
-.form_loginhome label{
+.tarjeta{
+
+    left: calc(50% - 50px);
+    position: absolute;
+     width: 80px;
+     height: 50px;
+     margin: 2%;
+     font-weight: 600;
+     font-size: 15px;
+     color: #ffffff;
+     background-color: #1883ba;
+     border-radius: 50px;
+     border: 2px solid #0016b0;
+     
+ }
+.enviar{
+
+  
+    width: 80px;
+    height: 50px;
+    margin: 2%;
+    font-weight: 600;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 50px;
+    border: 2px solid #0016b0;
+    
+}
+
+
+
+
+/*.form_loginhome label{
     margin: 0;
     text-align: center;
 
@@ -107,17 +146,22 @@
     
 
 }
+*/
+.form_loginhome .button_bienvenido{
 
-.form_loginhome button{
-
-
+    
     width: 125px;
     height: 125px;
-    margin: 10px 200px;
-    padding: 100;
-    font-weight: bold;
+    margin: 2% 37%;
     display: block;
-
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 500;
+    font-size: 14px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
     
 }
 
@@ -129,24 +173,33 @@
 
 }
 
-.form_loginhome button{
+.form_loginhome label{
+    margin: 0;
+    padding: 100;
+    font-size: 20px;
+    font-weight: bold;
+    display: block; 
+    text-align: center;
 
-    text-decoration: none;
-    padding: 10px;
-    font-weight: 500;
-    font-size: 15px;
-    color: #ffffff;
-    background-color: #1883ba;
-    border-radius: 6px;
-    border: 2px solid #0016b0;
 
+}
+
+.form_loginhome input{
+    
+    font-size: 20px;
+    padding: 100;
+    text-align: center;
+    font-weight: bold;
+    display: block; 
+    margin: auto;
+    
 }
 
 .form_loginhome button:hover{
     
     color: #1883ba;
     background-color: #ffffff;
-
+    font-weight: 600;
 
 }
 
